<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:textAllCaps="true"
            android:text="@string/convert"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/cryptoSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_8dp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:padding="@dimen/dimen_16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/currencySpinner"
            android:layout_width="match_parent"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:padding="@dimen/dimen_16dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createCardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/create_card"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>