<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ikechukwuakalu.krypto.cards.CardsActivity">

    <ProgressBar
        android:id="@+id/cardsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cardsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false" />

    <TextView
        android:id="@+id/noCardsTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_cards_msg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createNewCardFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dimen_16dp"
        app:srcCompat="@drawable/ic_add" />

</android.support.design.widget.CoordinatorLayout>
